tests/ui/delegation/generics/generic-params-same-names.stderr
error[E0496]: lifetime name `'a` shadows a lifetime name that is already in scope
  --> $DIR/generic-params-same-names.rs:5:12
   |
LL | trait Trait<'a, 'b, 'c, A, B, C, const N: usize> {
   |             -- first declared here
LL |     fn foo<'a, 'b, 'c, A, B, C, const N: usize>(&self) {
   |            ^^ lifetime `'a` already in scope

error[E0496]: lifetime name `'b` shadows a lifetime name that is already in scope
  --> $DIR/generic-params-same-names.rs:5:16
   |
LL | trait Trait<'a, 'b, 'c, A, B, C, const N: usize> {
   |                 -- first declared here
LL |     fn foo<'a, 'b, 'c, A, B, C, const N: usize>(&self) {
   |                ^^ lifetime `'b` already in scope

error[E0496]: lifetime name `'c` shadows a lifetime name that is already in scope
  --> $DIR/generic-params-same-names.rs:5:20
   |
LL | trait Trait<'a, 'b, 'c, A, B, C, const N: usize> {
   |                     -- first declared here
LL |     fn foo<'a, 'b, 'c, A, B, C, const N: usize>(&self) {
   |                    ^^ lifetime `'c` already in scope

error[E0403]: the name `A` is already used for a generic parameter in this item's generic parameters
  --> $DIR/generic-params-same-names.rs:5:24
   |
LL | trait Trait<'a, 'b, 'c, A, B, C, const N: usize> {
   |                         - first use of `A`
LL |     fn foo<'a, 'b, 'c, A, B, C, const N: usize>(&self) {
   |                        ^ already used

error[E0403]: the name `B` is already used for a generic parameter in this item's generic parameters
  --> $DIR/generic-params-same-names.rs:5:27
   |
LL | trait Trait<'a, 'b, 'c, A, B, C, const N: usize> {
   |                            - first use of `B`
LL |     fn foo<'a, 'b, 'c, A, B, C, const N: usize>(&self) {
   |                           ^ already used

error[E0403]: the name `C` is already used for a generic parameter in this item's generic parameters
  --> $DIR/generic-params-same-names.rs:5:30
   |
LL | trait Trait<'a, 'b, 'c, A, B, C, const N: usize> {
   |                               - first use of `C`
LL |     fn foo<'a, 'b, 'c, A, B, C, const N: usize>(&self) {
   |                              ^ already used

error[E0403]: the name `N` is already used for a generic parameter in this item's generic parameters
  --> $DIR/generic-params-same-names.rs:5:39
   |
LL | trait Trait<'a, 'b, 'c, A, B, C, const N: usize> {
   |                                        - first use of `N`
LL |     fn foo<'a, 'b, 'c, A, B, C, const N: usize>(&self) {
   |                                       ^ already used

error[E0284]: type annotations needed
  --> $DIR/generic-params-same-names.rs:16:14
   |
LL | reuse Trait::foo;
   |              ^^^ cannot infer the value of the const parameter `N` declared on the method `foo`
   |
note: required by a const generic parameter in `Trait::foo`
  --> $DIR/generic-params-same-names.rs:5:33
   |
LL |     fn foo<'a, 'b, 'c, A, B, C, const N: usize>(&self) {
   |                                 ^^^^^^^^^^^^^^ required by this const generic parameter in `Trait::foo`
help: consider specifying the generic arguments
   |
LL | reuse Trait::foo::<A, B, C, N>;
   |                 ++++++++++++++

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0284, E0403, E0496.
For more information about an error, try `rustc --explain E0284`.
